--- a/src/app/views/main.scala.html
+++ b/src/app/views/main.scala.html
@@ -53,7 +53,7 @@
     <div id="content">@content</div>
     <br id="float-margin-trick" />
     <footer>
-      <p>&copy; web日記</p>
+      <p>powered by - <a href="https://github.com/mahata/webnikki">web日記</a></p>
     </footer>
   </body>
 </html>
